--- a/spring-boot-samples/spring-boot-sample-web-static/src/main/resources/static/index.html
+++ b/spring-boot-samples/spring-boot-sample-web-static/src/main/resources/static/index.html
@@ -145,6 +145,14 @@
 
 				</div>
 			</footer>
+			<form action="http://www.html.am/html-codes/textboxes/submitted.cfm">
+<textarea name="myTextBox" cols="50" rows="5" style="background-color:#FCF5D8;color:#AD8C08;">
+Enter some text...
+</textarea>
+<br />
+<input type="submit" />
+</form>
+
 		</div>
 	</body>
 </html>
