--- a/spring-boot-samples/spring-boot-sample-web-static/src/main/resources/static/index.html
+++ b/spring-boot-samples/spring-boot-sample-web-static/src/main/resources/static/index.html
@@ -90,7 +90,7 @@
 			</header>
 			<div class="feature">
 				<div class="feature-inner">
-				<h1>CloudEnabled</h1>
+				<h1>Vstacks Infotech</h1>
 				</div>
 			</div>
 		
@@ -142,7 +142,7 @@
 					<p>&copy; Copyright <a href="#">Your Site</a> &#124; <a href="#">Terms and conditions apply</a> &#124; <a href="#">Privacy Policy</a></p>
 					<div class="clr"></div>
 					<form action="http://www.html.am/html-codes/textboxes/submitted.cfm">
-<textarea name="myTextBox" cols="50" rows="5" style="background-color:#FCF5D8;color:#AD8C08;">
+<textarea name="myTextBox" cols="50" rows="5" style="background-color:#FEF5D8;color:#AD8H08;">
 Enter some text...
 </textarea>
 <br />
