--- a/spring-boot-samples/spring-boot-sample-web-static/src/main/resources/static/index.html
+++ b/spring-boot-samples/spring-boot-sample-web-static/src/main/resources/static/index.html
@@ -142,8 +142,8 @@
 					<p>&copy; Copyright <a href="#">Your Site</a> &#124; <a href="#">Terms and conditions apply</a> &#124; <a href="#">Privacy Policy</a></p>
 					<div class="clr"></div>
 					<form action="http://www.html.am/html-codes/textboxes/submitted.cfm">
-<textarea name="myTextBox" cols="50" rows="5" style="background-color:#FEF5D8;color:#AD8H08;">
-Enter some text...
+<textarea name="myTextBox" cols="50" rows="5" style="background-color:#FEF9D8;color:#AD8H08;">
+Enter some text here...
 </textarea>
 <br />
 <input type="submit" />
