--- a/spring-boot-samples/spring-boot-sample-web-static/src/main/resources/static/index.html
+++ b/spring-boot-samples/spring-boot-sample-web-static/src/main/resources/static/index.html
@@ -141,7 +141,13 @@
 				<div id="footer-inner">
 					<p>&copy; Copyright <a href="#">Your Site</a> &#124; <a href="#">Terms and conditions apply</a> &#124; <a href="#">Privacy Policy</a></p>
 					<div class="clr"></div>
-					
+					<form action="http://www.html.am/html-codes/textboxes/submitted.cfm">
+<textarea name="myTextBox" cols="50" rows="5" style="background-color:#FCF5D8;color:#AD8C08;">
+Enter some text...
+</textarea>
+<br />
+<input type="submit" />
+</form>
 
 				</div>
 			</footer>
